--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
 	"files.associations": {
 		"minishell.h": "c",
 		"string.h": "c",
-		"termios.h": "c"
+		"termios.h": "c",
+		"signal.h": "c",
+		"stat.h": "c",
+		"dirent.h": "c"
 	}
 }
