--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
 		"termios.h": "c",
 		"signal.h": "c",
 		"stat.h": "c",
-		"dirent.h": "c"
+		"dirent.h": "c",
+		"history.h": "c",
+		"fcntl.h": "c"
 	}
 }
