Heredoc has been fixed and the variable system is working, need to work on quote and double quote next

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: ebengtss <ebengtss@student.42.fr>          +#+  +:+       +#+         #
+#    By: mtrullar <mtrullar@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/19 20:58:55 by mtrullar          #+#    #+#              #
-#    Updated: 2024/08/30 18:13:47 by ebengtss         ###   ########.fr        #
+#    Updated: 2024/09/09 14:27:45 by mtrullar         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
