--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,7 @@
 		"cmath": "c",
 		"limits": "c",
 		"libft.h": "c"
-	}
+	},
+	"C_Cpp.errorSquiggles": "disabled",
+	"C_Cpp.default.compilerPath": ""
 }
